After launching civ2.exe from the game directory, the game starts up succesfully, and working correctly in the main menu. But after trying to open a map, with default game settings, it immediately crashes. In win2k3 it does not crash and opens a map successfully.
Tested on 0.4.12-dev-342-ge5fc2b4, with AC97 Audio Driver, Mesa3D and VBox Guest Additions installed.
Civ2 MGE / Multiplayer Gold edition v1.3 US, judging by game's readmes.
civ2.exe SHA1: DEEE27EE4E4B329AFE90BA1B2BEA178471362170.
- relates to
-
CORE-16957 Randomly happening ?"kernel corruption"? exposed on both testbots by "Wine Test, Module: user32, Test: scroll"
-
- Open
-
-
CORE-13924 Click-n-type Virtual Keyboard 3.03.4012 from rapps crash when opening program preferences
-
- Resolved
-