[0.4.11] [WIN32SS] Require at least the amount of extra memory, not exact amount

This fixes Civ II trying to create scrollbars based on 'native' scrollbars.
Fixes 2 application crashes CORE-15576 & CORE-13924

cherry picked from commit 0.4.12-dev-417-g
e022d8d7cb72bc611d6990062ad0f2962c0cab1d